# CLI-Toolbox

./: Cargo.toml  README.md
examples/: advanced.rs  basic.rs
src/: cli.rs  help.rs  input.rs  lib.rs  menu.rs  program.rs  program_lib.rs  system.rs  system_lib.rs  test.rs
src/cli/: menu.rs  mod.rs  program.rs  program_builder.rs  system.rs
src/tests/: mod.rs
